--- a/agent_runs/run_20250424_023531/index.html
+++ b/agent_runs/run_20250424_023531/index.html
@@ -102,6 +102,7 @@
             <h2>MLLM Calls</h2>
             <div id="mllm-call-links">
 <a class="mllm-call-link" href="mllm_calls/call_1/call.html" target="_blank">Call #1 - 2025-04-24 02:37:37</a>
+<a class="mllm-call-link" href="mllm_calls/call_2/call.html" target="_blank">Call #2 - 2025-04-24 02:57:47</a>
 </div>
         </div>
         <div id="conversation">
@@ -112,6 +113,68 @@
 <div class="image-container">
 <img src="images/turn_1_user_1.png" alt="User provided image">
 <div class="metadata">Image: turn_1_user_1.png</div>
+</div>
+<p><br>I've loaded an image for you to analyze. Consider the following question about the image:<br><br><question><br>How many geese are there in total?<br></question><br><br>Can you help me analyze this image and answer the question?<br><br>Your task is to thoroughly investigate the image to answer the question extremely accurately.<br><br>Example steps:<br>0. Zoom-in (cut away unrelated area)<br>1. Divide complex images into multiple parts (ALWAYS a good idea)<br>2. You may divide them into equal parts, or one-by-one black out objects of interest<br>3. Analyze each view in detail and jot down information related to the <question><br>4. Mark regions as analyzed by blacking them out<br>5. Only report a final answer when you are absolutely sure based on your analysis.<br><br>IMPORTANT MEMORY INSTRUCTION:<br>- When you discover important information that you need to remember for later, put it in curly braces like this: {important detail to remember}<br>- Only information in curly braces will be remembered between different crops<br>- Each time you analyze a new crop, you'll only have access to the current crop and the information you explicitly marked with curly braces<br>- Be strategic about what you put in curly braces - focus on key observations relevant to the question<br><br>TIPS:<br>- Zoom in by repeatedly cropping, until you have a very clear view of the region of interest<br>- Create multiple crops to focus on different parts of the image<br>- Examine the image section by section<br>- Combine examinations and analyze<br>- Be detailed in your descriptions of what you see in each view<br>- But only report information relevant to the question<br>- If you are done with a part, black it out before switching to another one. This helps you keep track of which parts of the image you have already analyzed.<br></p>
+</div>
+<div class="model-message">
+<h3>Model Response</h3>
+<p>Okay, I am analyzing the cropped view `37_3__left_geese__0_1247_1662_2494.png`.<br><br>This crop focuses on two geese swimming in the water. They appear to be Canada geese, with dark heads/necks and lighter bodies. The goose on the left is facing slightly towards the left, while the goose slightly ahead and to the right is facing more towards the right. They are floating on dark blue water with visible ripples across the surface. The lower part of the image shows slightly clearer water, possibly indicating shallower depth or submerged rocks/vegetation. The lighting appears somewhat dim or overcast. {Two geese visible in the left section of the water.}<br><br>I will now black out this region as I have analyzed it.</p>
+</div>
+<div class="tool-call">
+<h3>Tool Call #1: crop_image</h3>
+<pre>
+{
+  "bbox": [
+    0,
+    500,
+    500,
+    1000
+  ],
+  "view_id": "left_geese"
+}
+</pre>
+</div>
+<div class="tool-result">
+<h3>Tool Result</h3>
+<div class="image-container">
+<img src="images/turn_1_tool_1_2.png" alt="Tool result image">
+<div class="metadata">Image: turn_1_tool_1_2.png</div>
+</div>
+<p>Created new view at /mnt/home/jkp/hack/augment-swebench-agent/vqa_real_data_workspace/views/37_3__left_geese__0_1247_1662_2494.png<br>View ID: left_geese<br>Original image: /mnt/home/jkp/hack/augment-swebench-agent/vqa_real_data_workspace/images/37_3.png<br>Coordinates: (0, 1247, 1662, 2494)<br>Size: 1662x1247</p>
+</div>
+</div>
+</div>
+</div>
+<p><br>I've loaded an image for you to analyze. Consider the following question about the image:<br><br><question><br>How many geese are there in total?<br></question><br><br>Can you help me analyze this image and answer the question?<br><br>Your task is to thoroughly investigate the image to answer the question extremely accurately.<br><br>Example steps:<br>0. Zoom-in (cut away unrelated area)<br>1. Divide complex images into multiple parts (ALWAYS a good idea)<br>2. You may divide them into equal parts, or one-by-one black out objects of interest<br>3. Analyze each view in detail and jot down information related to the <question><br>4. Mark regions as analyzed by blacking them out<br>5. Only report a final answer when you are absolutely sure based on your analysis.<br><br>IMPORTANT MEMORY INSTRUCTION:<br>- When you discover important information that you need to remember for later, put it in curly braces like this: {important detail to remember}<br>- Only information in curly braces will be remembered between different crops<br>- Each time you analyze a new crop, you'll only have access to the current crop and the information you explicitly marked with curly braces<br>- Be strategic about what you put in curly braces - focus on key observations relevant to the question<br><br>TIPS:<br>- Zoom in by repeatedly cropping, until you have a very clear view of the region of interest<br>- Create multiple crops to focus on different parts of the image<br>- Examine the image section by section<br>- Combine examinations and analyze<br>- Be detailed in your descriptions of what you see in each view<br>- But only report information relevant to the question<br>- If you are done with a part, black it out before switching to another one. This helps you keep track of which parts of the image you have already analyzed.<br></p>
+</div>
+<div class="model-message">
+<h3>Model Response</h3>
+<p>Okay, I am analyzing the cropped view `37_3__left_geese__0_1247_1662_2494.png`.<br><br>This crop focuses on two geese swimming in the water. They appear to be Canada geese, with dark heads/necks and lighter bodies. The goose on the left is facing slightly towards the left, while the goose slightly ahead and to the right is facing more towards the right. They are floating on dark blue water with visible ripples across the surface. The lower part of the image shows slightly clearer water, possibly indicating shallower depth or submerged rocks/vegetation. The lighting appears somewhat dim or overcast. {Two geese visible in the left section of the water.}<br><br>I will now black out this region as I have analyzed it.</p>
+</div>
+<div class="tool-call">
+<h3>Tool Call #1: crop_image</h3>
+<pre>
+{
+  "bbox": [
+    0,
+    500,
+    500,
+    1000
+  ],
+  "view_id": "left_geese"
+}
+</pre>
+</div>
+<div class="tool-result">
+<h3>Tool Result</h3>
+<div class="image-container">
+<img src="images/turn_1_tool_1_2.png" alt="Tool result image">
+<div class="metadata">Image: turn_1_tool_1_2.png</div>
+</div>
+<p>Created new view at /mnt/home/jkp/hack/augment-swebench-agent/vqa_real_data_workspace/views/37_3__left_geese__0_1247_1662_2494.png<br>View ID: left_geese<br>Original image: /mnt/home/jkp/hack/augment-swebench-agent/vqa_real_data_workspace/images/37_3.png<br>Coordinates: (0, 1247, 1662, 2494)<br>Size: 1662x1247</p>
+</div>
+</div>
+</div>
 </div>
 <p><br>I've loaded an image for you to analyze. Consider the following question about the image:<br><br><question><br>How many geese are there in total?<br></question><br><br>Can you help me analyze this image and answer the question?<br><br>Your task is to thoroughly investigate the image to answer the question extremely accurately.<br><br>Example steps:<br>0. Zoom-in (cut away unrelated area)<br>1. Divide complex images into multiple parts (ALWAYS a good idea)<br>2. You may divide them into equal parts, or one-by-one black out objects of interest<br>3. Analyze each view in detail and jot down information related to the <question><br>4. Mark regions as analyzed by blacking them out<br>5. Only report a final answer when you are absolutely sure based on your analysis.<br><br>IMPORTANT MEMORY INSTRUCTION:<br>- When you discover important information that you need to remember for later, put it in curly braces like this: {important detail to remember}<br>- Only information in curly braces will be remembered between different crops<br>- Each time you analyze a new crop, you'll only have access to the current crop and the information you explicitly marked with curly braces<br>- Be strategic about what you put in curly braces - focus on key observations relevant to the question<br><br>TIPS:<br>- Zoom in by repeatedly cropping, until you have a very clear view of the region of interest<br>- Create multiple crops to focus on different parts of the image<br>- Examine the image section by section<br>- Combine examinations and analyze<br>- Be detailed in your descriptions of what you see in each view<br>- But only report information relevant to the question<br>- If you are done with a part, black it out before switching to another one. This helps you keep track of which parts of the image you have already analyzed.<br></p>
 </div>
